--- a/examples/FinRL_PaperTrading_Demo.ipynb
+++ b/examples/FinRL_PaperTrading_Demo.ipynb
@@ -101,8 +101,8 @@
    },
    "outputs": [],
    "source": [
-    "from finrl.config_tickers import DOW_30_TICKER\n",
-    "from finrl.config import INDICATORS\n",
+    "#from finrl.config_tickers import DOW_30_TICKER\n",
+    "#from finrl.config import INDICATORS\n",
     "from finrl.meta.env_stock_trading.env_stocktrading_np import StockTradingEnv\n",
     "from finrl.meta.env_stock_trading.env_stock_papertrading import AlpacaPaperTrading\n",
     "from finrl.meta.data_processor import DataProcessor\n",
@@ -135,57 +135,7 @@
     "\n",
     "importlib.reload(finrl.config);\n",
     "\n",
-    "from finrl.config import INDICATORS;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['AXP',\n",
-       " 'AMGN',\n",
-       " 'AAPL',\n",
-       " 'BA',\n",
-       " 'CAT',\n",
-       " 'CSCO',\n",
-       " 'CVX',\n",
-       " 'GS',\n",
-       " 'HD',\n",
-       " 'HON',\n",
-       " 'IBM',\n",
-       " 'INTC',\n",
-       " 'JNJ',\n",
-       " 'KO',\n",
-       " 'JPM',\n",
-       " 'MCD',\n",
-       " 'MMM',\n",
-       " 'MRK',\n",
-       " 'MSFT',\n",
-       " 'NKE',\n",
-       " 'PG',\n",
-       " 'TRV',\n",
-       " 'UNH',\n",
-       " 'CRM',\n",
-       " 'VZ',\n",
-       " 'V',\n",
-       " 'WBA',\n",
-       " 'WMT',\n",
-       " 'DIS',\n",
-       " 'DOW']"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#INDICATORS\n",
-    "DOW_30_TICKER"
+    "#from finrl.config import INDICATORS;"
    ]
   },
   {
@@ -194,7 +144,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#INDICATORS  = INDICATORS +['atr_10']"
+    "customIndicators=['close_25_sma','close_12_sma','cci_20']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#INDICATORS  #= INDICATORS +['atr_10']"
    ]
   },
   {
@@ -888,7 +848,8 @@
     "        model = agent.get_model(model_name, model_kwargs=erl_params)\n",
     "        trained_model = agent.train_model(\n",
     "            model=model, cwd=cwd, total_timesteps=break_step\n",
-    "        )"
+    "        )\n",
+    "        #print(env_instance);"
    ]
   },
   {
@@ -905,7 +866,7 @@
     "from finrl.config import RLlib_PARAMS\n",
     "#from finrl.config import TEST_END_DATE\n",
     "#from finrl.config import TEST_START_DATE\n",
-    "from finrl.config_tickers import DOW_30_TICKER\n",
+    "#from finrl.config_tickers import DOW_30_TICKER\n",
     "\n",
     "def test(\n",
     "    start_date,\n",
@@ -961,15 +922,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "INDICATORS"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {
@@ -986,7 +938,7 @@
    "outputs": [],
    "source": [
     "#ticker_list = DOW_30_TICKER\n",
-    "ticker_list = ['PHUN','GPRO','KEY','SLV'] #Let's get \n",
+    "ticker_list = ['AMCR'] #Let's get 'PHUN','GPRO','KEY','SLV',\n",
     "\n"
    ]
   },
@@ -1017,7 +969,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#print(action_dim)"
+    "print(action_dim)"
    ]
   },
   {
@@ -1032,7 +984,7 @@
    },
    "outputs": [],
    "source": [
-    "#print(ticker_list)"
+    "print(action_dim)"
    ]
   },
   {
@@ -1047,7 +999,7 @@
    },
    "outputs": [],
    "source": [
-    "print(INDICATORS)"
+    "#print(INDICATORS)"
    ]
   },
   {
@@ -1062,7 +1014,7 @@
     "#why are they taking the length of INDICATORS.\n",
     "#Is 1+2+3 not = 5?  Are they multiplying 3* action_dim?\n",
     "#Check the order of operations, how do we get 344 out of this equation?\n",
-    "state_dim = 1 + 2 + 3 * action_dim + len(INDICATORS) * action_dim"
+    "state_dim = 1 + 2 + 3 * action_dim + len(customIndicators) * action_dim"
    ]
   },
   {
@@ -1090,6 +1042,13 @@
    "source": [
     "env = StockTradingEnv  # it's empty right now will be set later, is a class from finrl"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1263,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {
     "id": "g1F84mebj4gu"
    },
@@ -1280,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 27,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1308,10 +1267,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The price of the first row for ticker  GPRO  is NaN.  It will filled with the first valid price.\n",
-      "The price of the first row for ticker  KEY  is NaN.  It will filled with the first valid price.\n",
-      "The price of the first row for ticker  PHUN  is NaN.  It will filled with the first valid price.\n",
-      "The price of the first row for ticker  SLV  is NaN.  It will filled with the first valid price.\n"
+      "The price of the first row for ticker  AMCR  is NaN.  It will filled with the first valid price.\n"
      ]
     },
     {
@@ -1336,16 +1292,16 @@
       "| `objC`: Objective of Critic network. Or call it loss function of critic network.\n",
       "| `objA`: Objective of Actor network. It is the average Q value of the critic network.\n",
       "|     step      time  |     avgR    stdR    avgS  |     objC      objA\n",
-      "| 2.00e+04        14  |    -0.51    0.00   12119  |     0.06      0.65\n",
-      "| 4.00e+04        28  |    -0.51    0.00   12119  |     0.07      1.02\n",
-      "| 6.00e+04        42  |    -0.49    0.00   12119  |     0.28      1.10\n",
-      "| 8.00e+04        56  |    -0.50    0.00   12119  |     0.01      1.17\n",
-      "| 1.00e+05        71  |    -0.52    0.00   12119  |     0.00      1.26\n"
+      "| 2.00e+04        13  |    -0.49    0.00   12345  |     0.02      0.08\n",
+      "| 4.00e+04        27  |    -0.48    0.00   12345  |     0.02      0.20\n",
+      "| 6.00e+04        40  |    -0.48    0.00   12345  |     0.01      0.25\n",
+      "| 8.00e+04        53  |    -0.47    0.00   12345  |     0.00      0.26\n",
+      "| 1.00e+05        67  |    -0.51    0.00   12345  |     0.00      0.29\n"
      ]
     }
    ],
    "source": [
-    "TrainSd = datetime.now()+timedelta(days=-60);\n",
+    "TrainSd = datetime.now()+timedelta(days=-62);\n",
     "TrainSd = TrainSd.strftime('%Y-%m-%d')\n",
     "#print(sd)\n",
     "TrainEd = datetime.now()+timedelta(days=-13);\n",
@@ -1359,7 +1315,7 @@
     "      ticker_list = ticker_list, \n",
     "      data_source = 'alpaca',\n",
     "      time_interval= '1D', \n",
-    "      technical_indicator_list= INDICATORS,\n",
+    "      technical_indicator_list= customIndicators,\n",
     "      drl_lib='elegantrl', \n",
     "      env=env,\n",
     "      model_name='ppo',\n",
@@ -1383,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 28,
    "metadata": {
     "id": "SxYoWCDa02TW"
    },
@@ -1407,10 +1363,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The price of the first row for ticker  GPRO  is NaN.  It will filled with the first valid price.\n",
-      "The price of the first row for ticker  KEY  is NaN.  It will filled with the first valid price.\n",
-      "The price of the first row for ticker  PHUN  is NaN.  It will filled with the first valid price.\n",
-      "The price of the first row for ticker  SLV  is NaN.  It will filled with the first valid price.\n"
+      "The price of the first row for ticker  AMCR  is NaN.  It will filled with the first valid price.\n"
      ]
     },
     {
@@ -1427,9 +1380,23 @@
      "text": [
       "The price of the first row for ticker  VIXY  is NaN.  It will filled with the first valid price.\n",
       "price_array:  2736\n",
-      "| load actor from: ./papertrading_erl/actor.pth\n",
+      "| load actor from: ./papertrading_erl/actor.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\gregs\\AppData\\Local\\Temp\\ipykernel_12360\\3323038178.py:104: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\torch\\csrc\\utils\\tensor_new.cpp:233.)\n",
+      "  s_tensor = _torch.as_tensor((state,), device=device)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Test Finished!\n",
-      "episode_return 0.999001019808394\n"
+      "episode_return 0.9990060331271601\n"
      ]
     }
    ],
@@ -1451,7 +1418,7 @@
     "                      ticker_list = ticker_list, \n",
     "                      data_source = 'alpaca',\n",
     "                      time_interval= '1D', \n",
-    "                      technical_indicator_list= INDICATORS,\n",
+    "                      technical_indicator_list= customIndicators,\n",
     "                      drl_lib='elegantrl', \n",
     "                      env=env, \n",
     "                      model_name='ppo',\n",
@@ -1483,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 30,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1511,10 +1478,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The price of the first row for ticker  GPRO  is NaN.  It will filled with the first valid price.\n",
-      "The price of the first row for ticker  KEY  is NaN.  It will filled with the first valid price.\n",
-      "The price of the first row for ticker  PHUN  is NaN.  It will filled with the first valid price.\n",
-      "The price of the first row for ticker  SLV  is NaN.  It will filled with the first valid price.\n"
+      "The price of the first row for ticker  AMCR  is NaN.  It will filled with the first valid price.\n"
      ]
     },
     {
@@ -1539,23 +1503,23 @@
       "| `objC`: Objective of Critic network. Or call it loss function of critic network.\n",
       "| `objA`: Objective of Actor network. It is the average Q value of the critic network.\n",
       "|     step      time  |     avgR    stdR    avgS  |     objC      objA\n",
-      "| 2.00e+04        14  |    -0.00    0.00   12345  |     0.00      0.05\n",
-      "| 4.00e+04        29  |    -0.00    0.00   12345  |     0.00      0.04\n",
-      "| 6.00e+04        43  |    -0.00    0.00   12345  |     0.00      0.05\n",
-      "| 8.00e+04        57  |    -0.00    0.00   12345  |     0.00      0.06\n",
-      "| 1.00e+05        71  |    -0.00    0.00   12345  |     0.00      0.05\n",
-      "| 1.20e+05        85  |    -0.00    0.00   12345  |     0.00      0.05\n",
-      "| 1.40e+05       100  |    -0.00    0.00   12345  |     0.00      0.05\n",
-      "| 1.60e+05       114  |    -0.00    0.00   12345  |     0.00      0.05\n",
-      "| 1.80e+05       128  |    -0.00    0.00   12345  |     0.00      0.05\n",
-      "| 2.00e+05       142  |    -0.00    0.00   12345  |     0.00      0.04\n"
+      "| 2.00e+04        13  |    -0.46    0.00   12345  |     0.07      0.11\n",
+      "| 4.00e+04        27  |    -0.50    0.00   12345  |     0.10      0.13\n",
+      "| 6.00e+04        40  |    -0.47    0.00   12345  |     0.08      0.18\n",
+      "| 8.00e+04        54  |    -0.50    0.00   12345  |     0.08      0.19\n",
+      "| 1.00e+05        67  |    -0.49    0.00   12345  |     0.00      0.20\n",
+      "| 1.20e+05        81  |    -0.46    0.00   12345  |     0.02      0.25\n",
+      "| 1.40e+05        94  |    -0.49    0.00   12345  |     0.04      0.27\n",
+      "| 1.60e+05       108  |    -0.47    0.00   12345  |     0.02      0.29\n",
+      "| 1.80e+05       121  |    -0.48    0.00   12345  |     0.03      0.32\n",
+      "| 2.00e+05       134  |    -0.46    0.00   12345  |     0.00      0.34\n"
      ]
     }
    ],
    "source": [
     "#Again what is the difference between test and train?  And what is the difference between this train and the first one?\n",
     "#Are there new/different parameters?  Have preset values changed?\n",
-    "FullSd = datetime.now()+timedelta(days=-60);\n",
+    "FullSd = datetime.now()+timedelta(days=-365);\n",
     "FullSd = FullSd.strftime('%Y-%m-%d')\n",
     "#print(sd)\n",
     "FullEd = datetime.now()+timedelta(days=-1);\n",
@@ -1567,7 +1531,7 @@
     "      ticker_list = ticker_list, \n",
     "      data_source = 'alpaca',\n",
     "      time_interval= '1D', \n",
-    "      technical_indicator_list= INDICATORS,\n",
+    "      technical_indicator_list= customIndicators,\n",
     "      drl_lib='elegantrl', \n",
     "      env=env, \n",
     "      model_name='ppo',\n",
@@ -1578,35 +1542,6 @@
     "      erl_params=ERL_PARAMS,\n",
     "      cwd='./papertrading_erl_retrain',\n",
     "      break_step=2e5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Example results:\n",
-    "\n",
-    "\n",
-    "# | `step`: Number of samples, or total training steps, or running times of `env.step()`.  #Where is this set?\n",
-    "# | `time`: Time spent from the start of training to this moment. # Total Runtime for training.\n",
-    "# | `avgR`: Average value of cumulative rewards,# which is the sum of rewards in an episode. negative or 0 is  not good, need to adjust.\n",
-    "# | `stdR`: Standard dev of cumulative rewards, which is the sum of rewards in an episode.\n",
-    "# | `avgS`: Average of steps in an episode.   #should be at least 1000 preferably more, where is this set?\n",
-    "# | `objC`: Objective of Critic network. Or call it loss function of critic network.\n",
-    "# | `objA`: Objective of Actor network. It is the average Q value of the critic network. #Higher the better, it is calculated per\n",
-    "# |     step      time  |     avgR    stdR    avgS  |     objC      objA\n",
-    "# | 2.00e+04        11  |    -0.00    0.00    7799  |     0.03      0.04\n",
-    "# | 4.00e+04        21  |    -0.00    0.00    7799  |     0.01      0.04\n",
-    "# | 6.00e+04        32  |    -0.00    0.00    7799  |     0.00      0.03\n",
-    "# | 8.00e+04        42  |    -0.00    0.00    7799  |     0.00      0.05\n",
-    "# | 1.00e+05        53  |    -0.00    0.00    7799  |     0.00      0.04\n",
-    "# | 1.20e+05        64  |    -0.00    0.00    7799  |     0.00      0.05\n",
-    "# | 1.40e+05        74  |    -0.00    0.00    7799  |     0.00      0.06\n",
-    "# | 1.60e+05        85  |    -0.00    0.00    7799  |     0.00      0.06\n",
-    "# | 1.80e+05        95  |    -0.00    0.00    7799  |     0.00      0.04\n",
-    "# | 2.00e+05       106  |    -0.00    0.00    7799  |     0.00      0.05"
    ]
   },
   {
@@ -1629,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1646,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 32,
    "metadata": {
     "id": "LpkoZpYzfneS"
    },
@@ -2007,7 +1942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -2019,10 +1954,10 @@
     {
      "data": {
       "text/plain": [
-       "47"
+       "9"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2033,7 +1968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -2045,10 +1980,10 @@
     {
      "data": {
       "text/plain": [
-       "4"
+       "1"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2059,7 +1994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 36,
    "metadata": {
     "id": "Kl9nulnAJtiI"
    },
@@ -2070,12 +2005,8 @@
      "text": [
       "| load actor from: ./papertrading_erl_retrain/actor.pth\n",
       "Waiting for market to open...\n",
-      "Market opened.\n",
-      "4\n",
-      "Market order of | 2 PHUN sell | completed.\n",
-      "Quantity is 0, order of | 0 GPRO sell | not completed.\n",
-      "Quantity is 0, order of | 0 KEY sell | not completed.\n",
-      "Quantity is 0, order of | 0 SLV sell | not completed.\n"
+      "1005 minutes til market open.\n",
+      "1004 minutes til market open.\n"
      ]
     }
    ],
@@ -2091,7 +2022,7 @@
     "                                       API_KEY = API_KEY, \n",
     "                                       API_SECRET = API_SECRET, \n",
     "                                       API_BASE_URL = API_BASE_URL, \n",
-    "                                       tech_indicator_list = INDICATORS, \n",
+    "                                       tech_indicator_list = customIndicators, \n",
     "                                       turbulence_thresh=30, \n",
     "                                       max_stock=1e2)\n",
     "paper_trading_erl.run()"
