--- a/_zBronzeTraining/Bronze_Metal_ArkETF_Bot.ipynb
+++ b/_zBronzeTraining/Bronze_Metal_ArkETF_Bot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,18 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\gregs\\anaconda3\\envs\\BronzeTrainEnv\\lib\\site-packages\\pyfolio\\pos.py:26: UserWarning: Module \"zipline.assets\" not found; multipliers will not be applied to position notionals.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -36,6 +27,10 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "\n",
+    "from typing import Tuple\n",
+    "from typing import List\n",
+    "from typing import Union\n",
     "\n",
     "import os\n",
     "import time\n",
@@ -56,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,17 +73,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
     "#  https://pypi.org/project/stockstats/ for reference\n",
-    "customIndicators=['close_3_sma','close_15_sma','close_30_sma','close_60_sma','close_180_sma','cci_21']"
+    "customIndicators=['close_30_sma','close_60_sma','close_180_sma','cci_30','atr_10']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,9 +365,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1066462666.py, line 44)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[117], line 44\u001b[1;36m\u001b[0m\n\u001b[1;33m    def update_net(self, buffer List[Tuple]) -> [float]:\u001b[0m\n\u001b[1;37m                                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "class AgentPPO(AgentBase):\n",
@@ -418,7 +422,7 @@
     "        undones = (1 - dones.type(torch.float32)).unsqueeze(1)\n",
     "        return states, actions, logprobs, rewards, undones\n",
     "\n",
-    "    def update_net(self, buffer) -> [float]:\n",
+    "    def update_net(self, buffer List[Tuple]) -> [float]:\n",
     "        with torch.no_grad():\n",
     "            states, actions, logprobs, rewards, undones = buffer\n",
     "            buffer_size = states.shape[0]\n",
@@ -487,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,9 +559,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 119,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "closing parenthesis ')' does not match opening parenthesis '[' (3306711378.py, line 16)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[119], line 16\u001b[1;36m\u001b[0m\n\u001b[1;33m    def step(self, action: int) -> Tuple[int, float, bool, dict):  # agent interacts in env\u001b[0m\n\u001b[1;37m                                                               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m closing parenthesis ')' does not match opening parenthesis '['\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "class PendulumEnv(gym.Wrapper):  # a demo of custom gym env\n",
@@ -575,7 +588,7 @@
     "    def reset(self) -> np.ndarray:  # reset the agent in env\n",
     "        return self.env.reset()\n",
     "\n",
-    "    def step(self, action: np.ndarray) -> (np.ndarray, float, bool, dict):  # agent interacts in env\n",
+    "    def step(self, action: int) -> Tuple[int, float, bool, dict):  # agent interacts in env\n",
     "        # We suggest that adjust action space to (-1, +1) when designing a custom env.\n",
     "        state, reward, done, info_dict = self.env.step(action * 2)\n",
     "        return state.reshape(self.state_dim), float(reward), done, info_dict\n",
@@ -623,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,7 +824,7 @@
     "        #everything below was added to override the default parameters in stocktrading_NP\n",
     "        'config': None,\n",
     "        'initial_account': 2e3,\n",
-    "        'gamma': .92,\n",
+    "        'gamma': .91,\n",
     "        'turbulence_thresh': 30,\n",
     "        'min_stock_rate': 5e-1,\n",
     "        'max_stock': 1e2,\n",
@@ -845,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,7 +908,7 @@
     "        #everything below was added to override the default parameters in stocktrading_NP\n",
     "        'config': None,\n",
     "        'initial_account': 2e3,\n",
-    "        'gamma': 0.92,\n",
+    "        'gamma': 0.91,\n",
     "        'turbulence_thresh': 30,\n",
     "        'min_stock_rate': 5e-1,\n",
     "        'max_stock': 1e2,\n",
@@ -925,13 +938,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Make sure the gammas are the same in all 3 places\n",
     "#Make sure you update the gamma on each training session on each training episode!  \n",
-    "ERL_PARAMS = {\"learning_rate\": 0.033,\"batch_size\": 2048,\"gamma\":  0.92,\n",
+    "ERL_PARAMS = {\"learning_rate\": 0.0033,\"batch_size\": 2048,\"gamma\":  0.91,\n",
     "        \"seed\":312,\"net_dimension\":[128,64,32,16,8], \"target_step\":30000, \"eval_gap\":30,\n",
     "        \"eval_times\":1} \n",
     "env = StockTradingEnv\n",
@@ -946,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -986,6 +999,7 @@
       "The price of the first row for ticker  ARKG  is NaN.  It will filled with the first valid price.\n",
       "The price of the first row for ticker  IAU  is NaN.  It will filled with the first valid price.\n",
       "The price of the first row for ticker  PLTM  is NaN.  It will filled with the first valid price.\n",
+      "The price of the first row for ticker  SDS  is NaN.  It will filled with the first valid price.\n",
       "The price of the first row for ticker  SLV  is NaN.  It will filled with the first valid price.\n"
      ]
     },
@@ -1011,11 +1025,21 @@
       "| `objC`: Objective of Critic network. Or call it loss function of critic network.\n",
       "| `objA`: Objective of Actor network. It is the average Q value of the critic network.\n",
       "|     step      time  |     avgR    stdR    avgS  |     objC      objA\n",
-      "| 2.00e+04        14  |    -0.51    0.00   12345  |     0.08      0.14\n",
-      "| 4.00e+04        27  |    -0.47    0.00   12345  |     0.10      0.20\n",
-      "| 6.00e+04        41  |    -0.50    0.00   12345  |     0.07      0.29\n",
-      "| 8.00e+04        55  |    -0.47    0.00   12345  |     0.05      0.38\n",
-      "| 1.00e+05        69  |    -0.50    0.00   12345  |     0.09      0.39\n"
+      "| 2.00e+04        14  |    -0.50    0.00   12345  |     0.14      0.08\n",
+      "| 4.00e+04        28  |    -0.56    0.00   12345  |     0.12      0.10\n",
+      "| 6.00e+04        42  |    -0.53    0.00   12345  |     0.06      0.11\n",
+      "| 8.00e+04        56  |    -0.54    0.00   12345  |     0.07      0.11\n",
+      "| 1.00e+05        70  |    -0.51    0.00   12345  |     0.06      0.12\n",
+      "| 1.20e+05        84  |    -0.47    0.00   12345  |     0.12      0.11\n",
+      "| 1.40e+05        98  |    -0.50    0.00   12345  |     0.07      0.11\n",
+      "| 1.60e+05       112  |    -0.48    0.00   12345  |     0.20      0.11\n",
+      "| 1.80e+05       126  |    -0.48    0.00   12345  |     0.19      0.12\n",
+      "| 2.00e+05       140  |    -0.49    0.00   12345  |     0.05      0.11\n",
+      "| 2.20e+05       154  |    -0.51    0.00   12345  |     0.19      0.12\n",
+      "| 2.40e+05       168  |    -0.48    0.00   12345  |     0.09      0.13\n",
+      "| 2.60e+05       181  |    -0.50    0.00   12345  |     0.16      0.15\n",
+      "| 2.80e+05       195  |    -0.51    0.00   12345  |     0.16      0.13\n",
+      "| 3.00e+05       209  |    -0.51    0.00   12345  |     0.01      0.12\n"
      ]
     }
    ],
@@ -1036,17 +1060,17 @@
     "      API_BASE_URL = API_BASE_URL,\n",
     "      erl_params=ERL_PARAMS,\n",
     "      cwd='./papertrading_erl',  #going to point the alpaca bot at the actual bot that is trained #notice this path changes during the retrain!\n",
-    "      break_step=1e5)"
+    "      break_step=3e5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Test\n",
-    "TestSd = datetime.now()+timedelta(days=-180);\n",
+    "TestSd = datetime.now()+timedelta(days=-120);\n",
     "TestSd = TestSd.strftime('%Y-%m-%d')\n",
     "\n",
     "#print(sd)\n",
@@ -1056,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -1082,6 +1106,7 @@
       "The price of the first row for ticker  ARKG  is NaN.  It will filled with the first valid price.\n",
       "The price of the first row for ticker  IAU  is NaN.  It will filled with the first valid price.\n",
       "The price of the first row for ticker  PLTM  is NaN.  It will filled with the first valid price.\n",
+      "The price of the first row for ticker  SDS  is NaN.  It will filled with the first valid price.\n",
       "The price of the first row for ticker  SLV  is NaN.  It will filled with the first valid price.\n"
      ]
     },
@@ -1098,10 +1123,10 @@
      "output_type": "stream",
      "text": [
       "The price of the first row for ticker  VIXY  is NaN.  It will filled with the first valid price.\n",
-      "price_array:  47702\n",
+      "price_array:  31670\n",
       "| load actor from: ./papertrading_erl/actor.pth\n",
       "Test Finished!\n",
-      "episode_return 0.9990010056535282\n"
+      "episode_return 0.9990010410480409\n"
      ]
     }
    ],
@@ -1317,56 +1342,27 @@
     "        return latency\n",
     "        \n",
     "    def run(self):\n",
-    "        orders = self.alpaca.list_orders(status=\"open\")\n",
-    "        for order in orders:\n",
-    "          self.alpaca.cancel_order(order.id)\n",
-    "    \n",
-    "        # Wait for market to open.\n",
-    "        print(\"Waiting for market to open...\")\n",
-    "        self.awaitMarketOpen()\n",
-    "        print(\"Market opened.\")\n",
+    "       \n",
+    "        try:\n",
+    "            orders = self.alpaca.list_orders(status=\"open\")\n",
+    "            for order in orders:\n",
+    "                self.alpaca.cancel_order(order.id)\n",
+    "            # latency = self.test_latency()\n",
+    "            # print(\"latency: \" + latency)\n",
+    "            # Wait for market to open.\n",
+    "            print(\"Waiting for market to open...\")\n",
+    "            self.awaitMarketOpen()\n",
+    "            print(\"Market opened.\")\n",
+    "        \n",
     "\n",
-    "        while True:\n",
-    "\n",
-    "          # Figure out when the market will close so we can prepare to sell beforehand.\n",
-    "          clock = self.alpaca.get_clock()\n",
-    "          closingTime = clock.next_close.replace(tzinfo=datetime.timezone.utc).timestamp()\n",
-    "          currTime = clock.timestamp.replace(tzinfo=datetime.timezone.utc).timestamp()\n",
-    "          self.timeToClose = closingTime - currTime\n",
-    "    \n",
-    "        #   if(self.timeToClose < (600)):\n",
-    "        #     # Close all positions when 10 minutes til market close.\n",
-    "        #     # print(\"Market closing soon. Stop trading.\")\n",
-    "        #     # break  #comment both of these lines out for closing positions, don't use break just use thread.sleep()\n",
+    "            self.trade()\n",
+    "            last_equity = float(self.alpaca.get_account().last_equity)\n",
+    "            cur_time = time.time()\n",
+    "            self.equities.append([cur_time,last_equity])\n",
     "            \n",
-    "        #     # Close all positions when 10 minutes til market close.\n",
-    "        #     print(\"Market closing soon.  Closing positions.\")\n",
-    "\n",
-    "        #     threads = []\n",
-    "        #     positions = self.alpaca.list_positions()\n",
-    "        #     for position in positions:\n",
-    "        #       if(position.side == 'long'):\n",
-    "        #         orderSide = 'sell'\n",
-    "        #       else:\n",
-    "        #         orderSide = 'buy'\n",
-    "        #       qty = abs(int(float(position.qty)))\n",
-    "        #       respSO = []\n",
-    "        #       tSubmitOrder = threading.Thread(target=self.submitOrder(qty, position.symbol, orderSide, respSO))\n",
-    "        #       tSubmitOrder.start()\n",
-    "        #       threads.append(tSubmitOrder)    # record thread for joining later\n",
-    "\n",
-    "        #     for x in threads:   #  wait for all threads to complete\n",
-    "        #         x.join()     \n",
-    "        #     # Run script again after market close for next trading day.\n",
-    "        #     print(\"Sleeping until market close (15 minutes).\")\n",
-    "        #     time.sleep(60 * 15)\n",
-    "            \n",
-    "        #   else:\n",
-    "        self.trade()\n",
-    "        last_equity = float(self.alpaca.get_account().last_equity)\n",
-    "        cur_time = time.time()\n",
-    "        self.equities.append([cur_time,last_equity])\n",
-    "        time.sleep(self.time_interval)\n",
+    "            time.sleep(self.time_interval)\n",
+    "        except Exception as e:\n",
+    "            logger.debug(\"An exception occurred\", exc_info=e) \n",
     "            \n",
     "    def awaitMarketOpen(self):\n",
     "        isOpen = self.alpaca.get_clock().is_open\n",
